# quansheng_toolkit

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  __init__.py  __main__.py  build_exe.bat  cli.py  launcher.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml
firmwares/: README.md  manifest.json
gui/: __init__.py  __main__.py  app.py  cockpit_preview.py  icons.py  main_window.py  prefs.py  state.py  theme.py  theme_gallery.py  wheel_guard.py  widgets.py  workers.py
gui/views/: calibration.py  channels.py  dashboard.py  display_mirror.py  dtmf.py  firmware.py  hex_view.py  scan_lists.py  settings_view.py  toolkit_settings.py
kradio/: __init__.py  dfu.py  display_mirror.py  dtmf_contacts.py  firmware.py  firmware_bundle.py  memory.py  memory_uvk5_v1.py  protocol.py  settings.py  settings_uvk5_v1.py  tones.py  workflow.py
kradio/models/: __init__.py
tests/: conftest.py  test_cli.py  test_dfu.py  test_display_mirror.py  test_dtmf_contacts.py  test_firmware.py  test_firmware_bundle.py  test_hex_view.py  test_memory.py  test_memory_uvk5_v1.py  test_protocol.py  test_settings.py  test_settings_uvk5_v1.py  test_tones.py  test_tones_integration.py  test_wheel_guard.py  test_workflow.py
